--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
+server.port = 8888
+
 # ===============================
 # = DATA SOURCE
 # ===============================
 spring.datasource.url = jdbc:mysql://localhost:3306/test
 spring.datasource.username = root
-spring.datasource.password = ayush
+spring.datasource.password = 1234
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
